# ChangeLog for app-admin/eselect
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.167 2010/10/23 20:25:47 halcy0n Exp $

  23 Oct 2010; Mark Loeser <halcy0n@gentoo.org> eselect-1.2.10.ebuild:
  Mark ppc64; bug #313829

*eselect-1.2.11 (27 Jul 2010)

  27 Jul 2010; Ulrich Mueller <ulm@gentoo.org> -eselect-1.2.8.ebuild,
  +eselect-1.2.11.ebuild:
  Version bump. Remove old.

  23 May 2010; Pacho Ramos <pacho@gentoo.org> eselect-1.2.10.ebuild:
  stable amd64, bug 313829

  08 May 2010; Raúl Porcel <armin76@gentoo.org> eselect-1.2.10.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #313829

  16 Apr 2010; Brent Baude <ranger@gentoo.org> eselect-1.2.10.ebuild:
  stable ppc, bug 313829

  09 Apr 2010; Tiago Cunha <tcunha@gentoo.org> eselect-1.2.10.ebuild:
  stable sparc, bug 313829

  09 Apr 2010; Jeroen Roovers <jer@gentoo.org> eselect-1.2.10.ebuild:
  Stable for HPPA (bug #313829).

  08 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  eselect-1.2.10.ebuild:
  stable x86, bug 313829

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org> eselect-1.2.9.ebuild:
  Marked ppc stable for bug #302878.

  06 Feb 2010; Raúl Porcel <armin76@gentoo.org> eselect-1.2.9.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #302878

*eselect-1.2.10 (05 Feb 2010)

  05 Feb 2010; Ulrich Mueller <ulm@gentoo.org> -eselect-1.2.3.ebuild,
  +eselect-1.2.10.ebuild:
  Version bump. Remove old.

  04 Feb 2010; Markus Meier <maekke@gentoo.org> eselect-1.2.9.ebuild:
  amd64/arm stable, bug #302878

  02 Feb 2010; Jeroen Roovers <jer@gentoo.org> eselect-1.2.9.ebuild:
  Stable for HPPA (bug #302878).

  01 Feb 2010; Tiago Cunha <tcunha@gentoo.org> eselect-1.2.9.ebuild:
  stable sparc, bug 302878

  01 Feb 2010; Christian Faulhammer <fauli@gentoo.org> eselect-1.2.9.ebuild:
  stable x86, bug 302878

  01 Feb 2010; Brent Baude <ranger@gentoo.org> eselect-1.2.9.ebuild:
  stable ppc64, bug 302878
