@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.167 2010/10/23 20:25:47 halcy0n Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect/ChangeLog,v 1.168 2010/10/23 20:48:27 ulm Exp $
+
+  23 Oct 2010; Ulrich Mueller <ulm@gentoo.org> -eselect-1.2.9.ebuild:
+  Remove old.
 
   23 Oct 2010; Mark Loeser <halcy0n@gentoo.org> eselect-1.2.10.ebuild:
   Mark ppc64; bug #313829
